--- a/homeoptik/templates/oscar/promotions/home.html
+++ b/homeoptik/templates/oscar/promotions/home.html
@@ -242,9 +242,9 @@
                 <div class="col-md-3">
                     <!-- vfeat -->
                     <div class="vfeat vfeat-lg">
-                        <i class="icon fa fa-"></i>
-                        <a class="title">large size</a>
-                        <p class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+                        <i class="icon fa fa-thumbs-o-up"></i>
+                        <a class="title">Гарантия</a>
+                        <p class="text">На все оправы и линзы.</p>
                     </div>
                     <!-- /vfeat -->
                 </div>
@@ -252,7 +252,7 @@
                     <!-- vfeat -->
                     <div class="vfeat vfeat-lg">
                         <i class="icon fa fa-truck"></i>
-                        <a class="title">Доставка по все России</a>
+                        <a class="title">Доставка по всей России</a>
                         <p class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
                     </div>
                     <!-- /vfeat -->
@@ -269,9 +269,9 @@
                 <div class="col-md-3">
                     <!-- vfeat -->
                     <div class="vfeat vfeat-lg">
-                        <i class="icon fa fa-apple"></i>
-                        <a class="title">large size</a>
-                        <p class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+                        <i class="icon ti-shield"></i>
+                        <a class="title">Без подделок</a>
+                        <p class="text">Только оригинальная продукция от известных брендов.</p>
                     </div>
                     <!-- /vfeat -->
                 </div>
