--- a/homeoptik/templates/oscar/partials/nav_primary.html
+++ b/homeoptik/templates/oscar/partials/nav_primary.html
@@ -5,7 +5,7 @@
 {% load flatpages %}
 {% load homeoptik_tags %}
 
-{% get_flatpages as flatpages %}
+{% get_flatpages '/help/' as flatpages %}
 {% get_offers_list as offers %}
 
 <nav class="nav-bottom hnav hnav-ruled white-bg boxed-section">
