--- a/homeoptik/templates/oscar/promotions/home.html
+++ b/homeoptik/templates/oscar/promotions/home.html
@@ -253,7 +253,7 @@
                     <div class="vfeat vfeat-lg">
                         <i class="icon fa fa-truck"></i>
                         <a class="title">Доставка по всей России</a>
-                        <p class="text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.</p>
+                        <p class="text">Доставка по России осуществляется наложенным платежом.По Москве можно заказать до 20 оправ для примерки.</p>
                     </div>
                     <!-- /vfeat -->
                 </div>
