--- a/homeoptik/templates/oscar/checkout/layout.html
+++ b/homeoptik/templates/oscar/checkout/layout.html
@@ -40,7 +40,7 @@
 
             <section class="{% block section_class %}content-block default-bg {% endblock %}">
                 <!-- Container -->
-                <div class="container cont-main no-pad-t">
+                <div class="container cont-main cont-pad-y-sm">
                     {% include "partials/alert_messages.html" %}
                     {# Div exists for AJAX updates to entire content section #}
 
