--- a/homeoptik/templates/oscar/search/partials/facet.html
+++ b/homeoptik/templates/oscar/search/partials/facet.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <!-- Panel -->
-<li class="dropdown">
+<li class="dropdown facet">
     <a href="#collapse{{ number }}" data-toggle="collapse" aria-expanded="{% if expanded %}true{% else %}false{% endif %}">
         <span class="text">{{ name }}</span>
         <span class="toggler ti ti-plus"></span>
