--- a/homeoptik/templates/oscar/checkout/checkout.html
+++ b/homeoptik/templates/oscar/checkout/checkout.html
@@ -4,14 +4,19 @@
 {% load i18n %}
 {% load purchase_info_tags %}
 {% load staticfiles %}
+{% load widget_tweaks %}
+{% load shipping_tags %}
 
 {% block title %}
-    {% trans "Checkout" %} | {{ block.super }}
+    Оформление заказа | {{ block.super }}
 {% endblock %}
+
+{% block header %}{% endblock %}
 
 {% block checkout_nav %}
     {% include 'checkout/nav.html' %}
 {% endblock %}
+
 
 {% block content %}
 
@@ -21,140 +26,246 @@
         </div>
     {% endif %}
 
-    <div class="row shipping-payment">
-        {% block shipping_address %}
-            <div class="col-sm-6">
-                <div class="sub-header">
-                    <h2>{% trans "Shipping" %}</h2>
+
+    {% block shipping_address %}
+        <!-- Row -->
+        <div class="row">
+
+        <div class="col-md-8 mgb-30-xs">
+
+        <div class="row">
+
+        <!-- Main Col -->
+        <div class="col-md-12 mgb-30-xs">
+            <!-- Panel -->
+            <div class="panel panel-default">
+                <!-- Heading -->
+                <div class="panel-heading">
+                    <h4 class="inline-block panel-title case-c">
+                        Адрес Доставки
+                    </h4>
+                    {% block shipping_address_actions %}
+                        <a href="{% url 'checkout:shipping-address' %}" class="pull-right">
+                            {% trans "Change" %}
+                        </a>
+                    {% endblock %}
                 </div>
-                {% if shipping_address %}
-                    <div class="well well-info">
-                        {% block shipping_address_actions %}
-                            <a href="{% url 'checkout:shipping-address' %}" class="pull-right">
-                                {% trans "Change" %}
-                            </a>
-                        {% endblock %}
-                        <h3>{% trans "Address" %}</h3>
-                        <address>
-                            {% for field in shipping_address.active_address_fields %}
-                                {{ field }}<br/>
-                            {% endfor %}
-                        </address>
+                <!-- /Heading -->
 
-                        {% if shipping_address.phone_number %}
-                            <h4>{% trans "Contact" %}</h4>
-                            <p>
-                                {% trans "Phone" %}: {{ shipping_address.phone_number }}
-                                {% if guest_email %}
-                                    <br/>{% trans "Email" %}: {{ guest_email }}
+                <!-- Panel Body -->
+                <div class="panel-body no-pad-t no-pad-b">
+                    {% if shipping_address %}
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <h5>
+                                    {% trans "Address" %}
+                                </h5>
+                                <address>
+                                    {% for field in shipping_address.active_address_fields %}
+                                        {{ field }}<br/>
+                                    {% endfor %}
+                                </address>
+                            </div>
+                            <div class="col-sm-6">
+                                {% if shipping_address.phone_number %}
+                                    <h5>{% trans "Contact" %}</h5>
+                                    <p>
+                                        {% trans "Phone" %}: {{ shipping_address.phone_number }}
+                                        {% if guest_email %}
+                                            <br/>{% trans "Email" %}: {{ guest_email }}
+                                        {% endif %}
+                                    </p>
                                 {% endif %}
-                            </p>
-                        {% endif %}
 
-                        {% if shipping_address.notes %}
-                            <h4>{% trans "Instructions" %}</h4>
-                            <p>{{ shipping_address.notes|linebreaks }}</p>
-                        {% endif %}
-                    </div>
-                {% endif %}
+                                {% if shipping_address.notes %}
+                                    <h5>{% trans "Instructions" %}</h5>
+                                    <p>{{ shipping_address.notes|linebreaks }}</p>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endif %}
+                </div>
+                <!-- /Panel Body -->
 
-                {% if shipping_method %}
-                    <div class="well well-info">
-                        {% block shipping_method_actions %}
-                            <a href="{% url 'checkout:shipping-method' %}" class="pull-right">
-                                {% trans "Change" %}
-                            </a>
-                        {% endblock %}
-                        <h3>{% trans "Shipping method" %}</h3>
+            </div>
+            <!-- /Panel -->
+        </div>
+        <!-- /Main Col -->
+
+        <!-- Main Col -->
+        <div class="col-sm-6 mgb-30-xs">
+            <!-- Panel -->
+            <div class="panel panel-default">
+                <!-- Heading -->
+                <div class="panel-heading">
+                    <h4 class="inline-block panel-title case-c">
+                        Способ доставки
+                    </h4>
+                    {% block shipping_method_actions %}
+                        <a href="{% url 'checkout:shipping-method' %}" class="pull-right">
+                            {% trans "Change" %}
+                        </a>
+                    {% endblock %}
+                </div>
+                <!-- /Heading -->
+
+                <!-- Panel Body -->
+                <div class="panel-body">
+                    {% if shipping_method %}
                         <p>{{ shipping_method.name }}
                             {% if shipping_method.description %}
                                 - {{ shipping_method.description|safe }}
                             {% endif %}
                         </p>
-
-                    </div>
-                {% endif %}
-            </div>
-        {% endblock shipping_address %}
-
-        {# You will almost certainly want to override this block to provide a payment summary #}
-        {% block payment_method %}
-            <div class="col-sm-6">
-                <div class="sub-header">
-                    <h2>{% trans "Payment" %}</h2>
+                    {% endif %}
                 </div>
-                <div class="well well-success">
-                    <a href="{% url 'checkout:payment-method' %}" class="pull-right">
-                        {% trans "Change" %}
-                    </a>
-                    <h3>{% trans "Payment" %}</h3>
-                    <p>{% trans "Payment details to go here" %}</p>
+                <!-- /Panel Body -->
+
+            </div>
+            <!-- /Panel -->
+        </div>
+        <!-- /Main Col -->
+    {% endblock %}
+
+{% block payment_method %}
+    <!-- Main Col -->
+    <div class="col-sm-6 mgb-30-xs">
+        <!-- Panel -->
+        <div class="panel panel-default">
+            <!-- Heading -->
+            <div class="panel-heading">
+                <h4 class="inline-block panel-title case-c">
+                    Способ оплаты
+                </h4>
+                <a href="{% url 'checkout:payment-method' %}" class="pull-right">
+                    {% trans "Change" %}
+                </a>
+            </div>
+            <!-- /Heading -->
+
+            <!-- Panel Body -->
+            <div class="panel-body">
+                <div class="hfeat hfeat-lg">
+                    <img class="icon"
+                         style="height: 60px"
+                         src="{% static  "images/payments/"|add:payment_method.code|add:".png" %}"
+                         alt="{{ payment_method.name }}"/>
+                    <a class="title">{{ payment_method.name }}</a>
                 </div>
             </div>
-        {% endblock payment_method %}
+            <!-- /Panel Body -->
+
+        </div>
+        <!-- /Panel -->
+    </div>
+    <!-- /Main Col -->
+
     </div>
 
-    {% block order_contents %}
-        <div class="sub-header">
-            {% block order_contents_actions %}
-                <a href="{% url 'basket:summary' %}" class="pull-right">
-                    {% trans "Edit order contents" %}
-                </a>
-            {% endblock %}
+    </div>
+{% endblock payment_method %}
 
-            <h2>{% trans "Order contents" %}</h2>
-        </div>
-        <div class="basket-title">
-            <div class="row">
-                <p class="col-sm-9 h4">{% trans "Item" %}</p>
-                <p class="col-sm-1 h4 align-center">{% trans "Quantity" %}</p>
-                <p class="col-sm-2 h4 align-right">{% trans "Total" %}</p>
-            </div>
-        </div>
-        {% for line in basket.all_lines %}
-            {% purchase_info_for_line request line as session %}
-            <div class="basket-items">
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="image_container">
-                            {% with image=line.product.primary_image %}
-                                {% thumbnail image.original "100x100" upscale=False as thumb %}
-                                <a href="{{ form.instance.product.get_absolute_url }}"><img class="thumbnail" src="{{ thumb.url }}" alt="{{ product.get_title }}"></a>
-                                {% endthumbnail %}
-                            {% endwith %}
-                        </div>
-                    </div>
-                    <div class="col-sm-7">
-                        <h3><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></h3>
-                        <span class="availability {{ session.availability.code }}">{{ session.availability.message }}</span>
-                    </div>
-                    <div class="col-sm-1 align-center">
-                        {{ line.quantity }}
-                    </div>
-                    <div class="col-sm-2 align-right">
-                        <p class="price_color">
-                            {% if not show_tax_separately and line.is_tax_known %}
-                                {{ line.line_price_incl_tax|currency:basket.currency }}
-                            {% else %}
-                                {{ line.line_price_excl_tax|currency:basket.currency }}
+{% block order_contents %}
+
+    <!-- Side Col -->
+    <div class="side-col col-md-4">
+
+        <!-- Side Widget -->
+        <div class="order-summary">
+            <table>
+                <tbody>
+                <tr>
+                    <td>Корзина</td>
+                    <td class="price text-nowrap">
+                        {% if basket.is_tax_known and not show_tax_separately %}
+                            {{ basket.total_incl_tax_excl_discounts|currency:basket.currency }}
+                        {% else %}
+                            {{ basket.total_excl_tax_excl_discounts|currency:basket.currency }}
+                        {% endif %}
+                    </td>
+                </tr>
+                {% if voucher_discounts %}
+                    {% for discount in voucher_discounts %}
+                        <tr>
+                            <td>
+                                {{ discount.voucher.name }} ({{ discount.voucher.code }})
+                                {% if editable %}
+                                    <form action="{% url 'basket:vouchers-remove' pk=discount.voucher.id %}" method="POST">
+                                        {% csrf_token %}
+                                        <input type="submit" value="{% trans 'Remove' %}" class="btn btn-sm btn-danger" />
+                                    </form>
+                                {% endif %}
+                            </td>
+                            <td class="price text-nowrap">-{{ discount.discount|currency:basket.currency }}</td>
+                        </tr>
+                    {% endfor %}
+                {% endif %}
+                {% for discount in offer_discounts %}
+                    <tr>
+                        <td>
+                            <span class="label label-success">скидка</span>
+                            {{ discount.name }}
+                            {% if discount.description %}
+                                <br/><small>{{ discount.description }}</small>
                             {% endif %}
-                        </p>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-
-        <div class="row">
-            <div class="col-sm-6">&nbsp;</div>
-            <div class="col-sm-6">
-                <div class="sub-header">
-                    <h2>{% trans 'Totals' %}</h2>
-                </div>
-                {% include 'basket/partials/basket_totals.html' %}
-            </div>
+                        </td>
+                        <td class="price text-nowrap">-{{ discount.discount|currency:basket.currency }}</td>
+                    </tr>
+                {% endfor %}
+                {% if not shipping_method.is_discounted %}
+                    <tr>
+                        <td>
+                            {{ shipping_method.name }}
+                        </td>
+                        <td class="price text-nowrap">
+                            {% if not show_tax_separately and shipping_charge.is_tax_known %}
+                                {{ shipping_charge.incl_tax|currency:basket.currency }}
+                            {% else %}
+                                {{ shipping_charge.excl_tax|currency:basket.currency }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% else %}
+                    {% shipping_charge_discount shipping_method basket as shipping_discount %}
+                    {% shipping_charge_excl_discount shipping_method basket as shipping_charge_excl_discount %}
+                    <tr>
+                        <td>
+                            {{ shipping_method.name }} (со скидкой)
+                        </td>
+                        <td class="price text-nowrap">
+                            {% if not show_tax_separately and shipping_charge.is_tax_known %}
+                                {{ shipping_charge.incl_tax|currency:basket.currency }}
+                            {% else %}
+                                {{ shipping_charge.excl_tax|currency:basket.currency }}
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endif %}
+                <tr class="total">
+                    <td> Всего </td>
+                    <td class="price text-nowrap">
+                        {% if order_total.is_tax_known %}
+                            {{ order_total.incl_tax|currency:basket.currency }}
+                        {% else %}
+                            {{ order_total.excl_tax|currency:basket.currency }}
+                        {% endif %}
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+            <a style="margin-bottom: 5px" class="btn btn-default btn-block btn-bigger" href="{% url 'basket:summary' %}">Редактировать корзину</a>
+            {% block place_order %}
+            {% endblock place_order %}
         </div>
+        <!-- /Side Widget -->
 
-    {% endblock order_contents %}
+    </div>
+    <!-- /Side Col -->
+
+{% endblock order_contents %}
+
+</div>
+    <!-- /Row -->
 
     {% block shipping_method %}
     {% endblock shipping_method %}
@@ -162,7 +273,8 @@
     {% block payment_details %}
     {% endblock payment_details %}
 
-    {% block place_order %}
-    {% endblock place_order %}
-
 {% endblock content %}
+
+
+
+
