--- a/homeoptik/templates/oscar/checkout/preview.html
+++ b/homeoptik/templates/oscar/checkout/preview.html
@@ -27,13 +27,6 @@
         <div style="display:none">
             {% block hiddenforms %}{% endblock %}
         </div>
-
-        <div class="form-group clearfix">
-            <div class="row">
-                <div class="col-sm-3 col-sm-offset-9">
-                     <button id='place-order' type="submit" class="btn btn-primary btn-lg btn-block" data-loading-text="{% trans 'Submitting...' %}">{% trans "Place order" %}</button>
-                </div>
-            </div>
-        </div>
+        <button id='place-order' type="submit"  class="btn btn-primary btn-block btn-bigger" data-loading-text="{% trans 'Submitting...' %}">Разместить заказ</button>
     </form>
 {% endblock place_order %}
